# tmodbus

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .yamllint  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md  FUNDING.yml  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency_review.yml  integration-tests.yml  linting.yml  pypi-publish.yml  scorecard.yml  tests.yml  typing.yml
docs/: ruff.toml
docs/source/: api.rst  architecture.rst  batch_reading.rst  conf.py  conftest.py  examples.rst  index.rst  server.rst  vendor_function_example.py  vendor_functions.rst
docs/specifications/: EULA.txt
examples/: async_ascii_client.py  async_rtu_client.py  async_rtu_over_tcp_client.py  async_tcp_client.py  async_tcp_security_server.py  async_tcp_server.py  async_tcp_tls_client.py  async_tcp_tls_server.py  generate_modbus_security_certs.py  ruff.toml
integration_tests/: helpers.py  integration_test_server.py  ruff.toml
integration_tests/fieldtalk/: .gitignore  compile.sh  test_diagslave.py
integration_tests/rmodbus/: Cargo.toml  ascii-server.rs  client.rs  compile.sh  compile_server.sh  server.rs  test_rmodbus_client.py  test_rmodbus_server.py
integration_tests/simonvetter/: client.go  compile.sh  go.mod  go.sum  server.go  test_simonvetter.py  test_simonvetter_client.py  test_simonvetter_server.py
integration_tests/tokio/: Cargo.toml  client.rs  compile.sh  server.rs  test_client.py  test_tokio_client.py  test_tokio_server.py
src/modbus_link/: __init__.py  types.py
src/modbus_link/client/: async_client.py
src/modbus_link/pdu/: __init__.py  base.py  coils.py  discrete_inputs.py  holding_registers.py
src/modbus_link/transport/: async_base.py  async_rtu.py  async_tcp.py
src/tmodbus/: __init__.py  const.py  exceptions.py
src/tmodbus/client/: __init__.py  async_client.py
src/tmodbus/pdu/: __init__.py  base.py  coils.py  device.py  discrete_inputs.py  exception_status.py  fifo.py  file.py  holding_registers.py  holding_registers_struct.py  serial_line.py
src/tmodbus/server/: __init__.py  async_ascii.py  async_rtu.py  async_rtu_over_tcp.py  async_tcp.py  async_udp.py  base.py  handler.py  security.py
src/tmodbus/transport/: __init__.py  async_ascii.py  async_base.py  async_rtu.py  async_rtu_over_tcp.py  async_smart.py  async_tcp.py  async_udp.py  base.py
src/tmodbus/utils/: crc.py  lrc.py  order_aware_struct.py  raw_traffic_logger.py  word_aware_struct.py
tests/: __init__.py  ruff.toml  test_exceptions.py  test_init.py  test_spec_conformance.py
tests/client/: __init__.py  test_async_client.py
tests/pdu/: __init__.py  test_base.py  test_coils.py  test_device.py  test_exception_status.py  test_fifo.py  test_file.py  test_holding_registers.py  test_holding_registers_struct.py  test_pdu.py  test_serial_line.py
tests/server/: __init__.py  test_async_ascii.py  test_async_rtu.py  test_async_rtu_over_tcp.py  test_async_tcp.py  test_async_tcp_security.py  test_async_udp.py  test_base.py  test_handler.py
tests/transport/: __init__.py  test_async_ascii.py  test_async_base.py  test_async_rtu.py  test_async_rtu_over_tcp.py  test_async_smart.py  test_async_tcp.py  test_async_udp.py  test_base.py
tests/utils/: __init__.py  test_crc.py  test_lrc.py  test_order_aware_struct.py  test_raw_traffic_logger.py  test_word_aware_struct.py
