[project]
name = "tmodbus"
authors= [{name="wlcrs"}]
description = "A modern, strongly typed Modbus client library."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["modbus", "modbus-tcp", "modbus-rtu"]
dynamic = ["version"]


[project.optional-dependencies]
tests = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]

async-rtu = [
    "pyserial-asyncio-fast>=0.16",
]

smart = [
    "tenacity>=9.1.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-packages = true

[tool.hatch.build.targets.sdist]
only-include = ["examples", "src", "tests"]

[tool.hatch.version]
source = "vcs"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "PLR2004", # Just annoying, not really useful
  "S101", # allow asserts

  # Conflicts with the Ruff formatter
  "COM812",
  "ISC001",

]
select = ["ALL"]

[tool.pytest.ini_options]
addopts = "--cov=tmodbus --cov-report=term-missing "
asyncio_mode = "auto"
