[project]
name = "tmodbus"
authors= [{name="wlcrs"}]
description = "A modern, strongly typed Modbus client library."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["modbus", "modbus-tcp", "modbus-rtu"]
dynamic = ["version"]


[project.optional-dependencies]

async-rtu = [
    "pyserial-asyncio-fast>=0.16",
]

smart = [
    "tenacity>=9.1.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-packages = true

[tool.hatch.build.targets.sdist]
only-include = ["examples", "src", "tests"]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "PLR2004", # Just annoying, not really useful
  "S101", # allow asserts

  # Conflicts with the Ruff formatter
  "COM812",
  "ISC001",

]
select = ["ALL"]

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["tmodbus"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.uv]
prerelease = "allow"

[dependency-groups]
dev = [
  "codespell==2.4.1",
  "covdefaults==2.3.0",
  "coverage[toml]==7.10.7",
  "pre-commit==4.3.0",
  "pre-commit-hooks==6.0.0",
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-cov==7.0.0",
  "ruff==0.13.3",
  "yamllint==1.37.1",
]
